cabal-version:      2.4
name:               Acetone
version:            0.1.0.0

synopsis: Simple 2D-based graphics library.
description: GLFW and Vulkan based windowing and graphics library for simple and interactable 2D graphics

bug-reports: https://github.com/Demonstrandum/Acetone

license: GPL-v3.0-or-later
author:             Samuel
maintainer:         samuel@knutsen.co

extra-source-files: README.md

executable Acetone
    main-is:          Main.hs
    build-depends:
        base ^>=4.14.3.0,
        GLFW ^=0.5.2.5
    hs-source-dirs:   app
    default-language: Haskell2010
