cabal-version:      3.0
name:               acetone
version:            0.1.0

synopsis: Simple 2D-based graphics library.
description:
    Graphics library for simple interactive 2D graphics with support
    for multiple backends. Mainly, the GLFW backend proivides windowing
    and OpenGL graphics capabilities, and supports GNU+Linux (X11/Wayland),
    macOS (Quartz) and Microsoft Windows (DWM).

homepage:           https://github.com/Demonstrandum/Acetone
bug-reports:        https://github.com/Demonstrandum/Acetone
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Samuel
maintainer:         samuel@knutsen.co

category:           Graphics
extra-source-files: CHANGELOG.md

library
    exposed-modules: Acetone
                   , Acetone.Frontend
                   , Acetone.Input
                   , Acetone.Shapes
    hs-source-dirs:  lib
    build-depends:
        , base < 5
        , mtl ^>=2.2.2
        , freer-simple ^>= 1.2.1.2
        , data-default ^>=0.7.1.1
    default-extensions:
        , DataKinds
        , FlexibleContexts
        , FlexibleInstances
        , GADTs
        , GeneralizedNewtypeDeriving
        , MultiParamTypeClasses
        , ScopedTypeVariables
        , FlexibleInstances
        , LambdaCase
        , TypeOperators
        , TupleSections
    ghc-options: -Wall -Wdeprecations -O2
    default-language: Haskell2010
