cabal-version:      3.8
name:               acetone
version:            0.1.0

synopsis: Simple 2D-based graphics library.
description:
    Graphics library for simple interactive 2D graphics with support
    for multiple backends. Mainly, the GLFW backend proivides windowing
    and OpenGL graphics capabilities, and supports GNU+Linux (X11/Wayland),
    macOS (Quartz) and Microsoft Windows (DWM).

homepage:           https://github.com/Demonstrandum/Acetone
bug-reports:        https://github.com/Demonstrandum/Acetone
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Samuel
maintainer:         samuel@knutsen.co

category:           Graphics
extra-source-files: README.md

library
    other-modules: Acetone.Utils
    exposed-modules: Acetone
                   , Acetone.Frontend
                   , Acetone.Input
                   , Acetone.Shapes
    hs-source-dirs:  lib
    build-depends:
        , base >= 4.9 && < 5
        , base-unicode-symbols ^>= 0.2
        , mtl ^>=2.2.2
        , template-haskell ^>= 2.19.0.0
        , freer-simple ^>= 1.2.1.2
        , data-default ^>=0.7.1.1
    default-extensions:
        , UnicodeSyntax
        , DataKinds
        , FlexibleContexts
        , FlexibleInstances
        , DeriveDataTypeable
        , DeriveLift
        , TemplateHaskell
        , GADTs
        , GeneralizedNewtypeDeriving
        , MultiParamTypeClasses
        , ScopedTypeVariables
        , LambdaCase
        , TypeOperators
        , TupleSections
        , OverloadedStrings
        , QuasiQuotes
    ghc-options: -Wall -Wdeprecations -O2
    default-language: Haskell2010
