cabal-version:      3.6
name:               acetone-backend-png
version:            0.1.0
synopsis:           Acetone backend for generating PNG images.

homepage:           https://github.com/Demonstrandum/Acetone
bug-reports:        https://github.com/Demonstrandum/Acetone
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Samuel
maintainer:         samuel@knutsen.co

category:           Graphics
extra-source-files: READNME.md

library
    exposed-modules:  Acetone.Backend.PNG
    build-depends:    base < 5
                    , acetone ^>=0.1.0
    hs-source-dirs:   lib
    ghc-options: -Wall -Wdeprecations -O2
    default-language: Haskell2010
