cabal-version:      3.6
name:               beats-acetone
version:            0.1.0
synopsis:           Beats rythm test for Acetone.

license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Samuel
maintainer:         samuel@knutsen.co

category:           Graphics
extra-source-files: README.md

executable beats-acetone
    main-is:        Main.hs
    other-modules:
    hs-source-dirs: ./
    build-depends:
        base < 5,
        acetone-backend-glfw ^>= 0.1.0,
        acetone ^>= 0.1.0
    ghc-options: -Wall -Wdeprecations -O2 -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010
